generated/checker-for-evaluation/generated/test-Memory-Leak-51df947678360faf1967fe0bd1a40c681f634104/build_logs/6/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkEndFunction(const clang::ReturnStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:86:9: error: ‘ImmutableMap’ does not name a type
   86 |   const ImmutableMap<const MemRegion*, bool> *AllocMap = State->getStateMap<NetdevAllocMap>();
      |         ^~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:87:8: error: ‘AllocMap’ was not declared in this scope; did you mean ‘alloca’?
   87 |   if (!AllocMap)
      |        ^~~~~~~~
      |        alloca
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:91:17: error: ‘AllocMap’ was not declared in this scope; did you mean ‘alloca’?
   91 |   for (auto I = AllocMap->begin(), E = AllocMap->end(); I != E; ++I) {
      |                 ^~~~~~~~
      |                 alloca
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:91:62: error: ‘E’ was not declared in this scope
   91 |   for (auto I = AllocMap->begin(), E = AllocMap->end(); I != E; ++I) {
      |                                                              ^
In file included from /usr/include/c++/11/memory:76,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:20,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/LLVM.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/usr/include/c++/11/bits/unique_ptr.h: In instantiation of ‘typename std::_MakeUniq<_Tp>::__single_object std::make_unique(_Args&& ...) [with _Tp = clang::ento::BasicBugReport; _Args = {clang::ento::BugType&, const char (&)[63], clang::ento::ExplodedNode*&}; typename std::_MakeUniq<_Tp>::__single_object = std::unique_ptr<clang::ento::BasicBugReport, std::default_delete<clang::ento::BasicBugReport> >]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:127:49:   required from here
/usr/include/c++/11/bits/unique_ptr.h:962:30: error: no matching function for call to ‘clang::ento::BasicBugReport::BasicBugReport(clang::ento::BugType&, const char [63], clang::ento::ExplodedNode*&)’
  962 |     { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:256:3: note: candidate: ‘clang::ento::BasicBugReport::BasicBugReport(const clang::ento::BugType&, llvm::StringRef, clang::ento::PathDiagnosticLocation)’
  256 |   BasicBugReport(const BugType &bt, StringRef desc, PathDiagnosticLocation l)
      |   ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:256:76: note:   no known conversion for argument 3 from ‘clang::ento::ExplodedNode*’ to ‘clang::ento::PathDiagnosticLocation’
  256 |   BasicBugReport(const BugType &bt, StringRef desc, PathDiagnosticLocation l)
      |                                                     ~~~~~~~~~~~~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note: candidate: ‘clang::ento::BasicBugReport::BasicBugReport(const clang::ento::BasicBugReport&)’
  251 | class BasicBugReport : public BugReport {
      |       ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note:   candidate expects 1 argument, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note: candidate: ‘clang::ento::BasicBugReport::BasicBugReport(clang::ento::BasicBugReport&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note:   candidate expects 1 argument, 3 provided
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
